Dark Mode fixed not being toggled on new elements

--- a/Task_2.7/styles/index.css
+++ b/Task_2.7/styles/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 .darkMode__element {
-  background-color: #2c2c2c;
+  background-color: #2c2c2c !important;
   color: white;
 }
 
@@ -34,6 +34,7 @@ body {
 .nav__header .displayMode .image {
   width: 16px;
 }
+
 .nav__form {
   display: flex;
   width: 100%;
